--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "http://192.168.1.7:8080",
+        "url": "https://graphql.anilist.co",
         "headers": {
           "user-agent": "JS GraphQL"
         },
