--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
 
     implementation 'com.orhanobut:logger:2.2.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
