--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'com.apollographql.apollo'
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 android {
@@ -42,6 +43,7 @@ apollo {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
@@ -59,5 +61,6 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.joooonho:selectableroundedimageview:1.0.1'
 
 }
