--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.animesuggest"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -62,5 +62,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.joooonho:selectableroundedimageview:1.0.1'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
 
 }
